<resources>
    <string name="app_name">Registro Belenes</string>
    <string name="header">CUCSH</string>
    <string name="datos_drawer_a">Sede Belenes</string>
    <string name="lunes">lun.</string>
    <string name="martes">mar.</string>
    <string name="miercoles">mié.</string>
    <string name="jueves">jue.</string>
    <string name="viernes">vie.</string>
    <string name="sabado">sáb.</string>
    <string name="domingo">dom.</string>
    <string name="connection_error">Error de conexión</string>
    <string name="transition_date_dialog_helzio" translatable="false">transition_date_dialog_helzio</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="ir_a_la_fecha_seleccionada">Ir a la Fecha Seleccionada</string>
    <string name="ir_a_fecha">Ir a la fecha seleccionada</string>
    <string name="presiona_aqu_para_registrar_otro_evento">Presiona aquí para registrar otro evento.</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="separador_repeticion">~</string>
    <string name="titulo_evento">Título del evento…</string>
    <string name="cerrar">cerrar</string>
    <string name="guardar">GUARDAR</string>
    <string name="auditorio">Auditorios</string>
    <string name="tipo_de_actividad">Tipo de actividad</string>
    <string name="toca_resgitrar_evento">Toca para registrar un evento.</string>
    <string name="no_eventos_registra">Presiona para registrar un evento.</string>
    <string name="label_auditorio">Auditorio:</string>
    <string name="label_tipo_de_evento">Tipo de evento:</string>
    <string name="label_hora_y_fecha_del_evento">Hora y fecha del evento:</string>
    <string name="label_repe_del_evento">Repetición del evento:</string>
    <string name="label_nombre_del_organizador">Nombre del organizador:</string>
    <string name="label_numero_tel">Numero telefónico</string>
    <string name="label_nota">Nota:</string>
    <string name="label_id">ID del evento:</string>
    <string name="label_fecha_del_evento">Fecha del evento:</string>
    <string name="label_horario_del_evento">Horario del evento:</string>
    <string name="label_cerrar">Cerrar</string>
    <string name="label_borrar_evento">Borrar evento</string>
    <string name="label_editar_evento">Editar evento</string>
    <string name="label_titulo_del_evento">Titulo del evento</string>
    <string name="label_tipo_de_evento2">Tipo de evento</string>
    <string name="label_fecha_inicial">Fecha inicial:</string>
    <string name="label_fecha_final">Fecha final:</string>
    <string name="label_hora_inicial">Hora inicial:</string>
    <string name="label_numero_telefonico2">Número telefónico</string>
    <string name="label_nombre_del_organizador2">Nombre del organizador</string>
    <string name="label_contrasena2">Contraseña</string>
    <string name="label_contrasena">Contraseña:</string>
    <string name="label_ingresar_nota">Ingresar nota</string>
    <string name="label_hora_final">Hora final</string>
    <string name="label_nota_cta">Nota para CTA</string>
    <string name="cd_repeticion">Repetición</string>
</resources>
