<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frameconte"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#fff"
    android:elevation="24dp"
    android:visibility="invisible">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#fff">

        <TextView
            android:id="@+id/dateDialogToolbar"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignEnd="@+id/conteDialog"
            android:layout_alignStart="@+id/conteDialog"
            android:background="@color/colorPrimario"
            android:gravity="center"
            android:text="@string/ir_a_la_fecha_seleccionada"
            android:textColor="#fff" />

        <DatePicker xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/conteDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dateDialogToolbar"
            android:layout_gravity="center"
            android:background="#fff" />

        <android.support.v7.widget.ButtonBarLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignEnd="@+id/conteDialog"
            android:layout_alignStart="@+id/conteDialog"
            android:layout_below="@+id/conteDialog"
            android:background="#fff"
            android:gravity="end">

            <Button
                android:onClick="dismissDialog"
                android:id="@+id/bt_dialog_cancenlar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:text="@string/cancelar"
                android:textColor="@color/colorAcento" />

            <Button
                android:onClick="dismissDialogAceptar"
                android:id="@+id/bt_dialog_aceptar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:text="@string/aceptar"
                android:textColor="@color/colorAcento" />

        </android.support.v7.widget.ButtonBarLayout>
    </RelativeLayout>

</FrameLayout>